# rust_todos

./: .gitignore  Cargo.toml
.sqlx/: query-5caf49bbe6d736658ef716adc58bf054b749220b7fb387d486e9df1170431366.json  query-63c8a14c25e33638f1f45412b31382b3442c45a8b1f6dc67fdf29745c5287d02.json  query-9b9c3baefd0ee6ea883202f6721fd954ea61d20f1abe2bb8492835287a291d2a.json  query-cf4c414485285596f5e3038bd9453dd0a912f29521853e332c74f37a95b22d42.json
migrations/: 20240728171457_create_todos_table.sql
src/: lib.rs  main.rs
