[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
tokio = {version = "1", features = ["full"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15.0"
[[bin]]
name = "todos"
path = "src/main.rs"